dataset1235/2025-2/805158916/users/1084532176/executions/1584167357_1026882843.log
== RUN (2025-08-27 14:10:13)
-- CODE: 
raio = float(input("escreva o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:11:58)
-- CODE: 
from math import pi

raio = float(input("escreva o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
escreva o valor do raio0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
escreva o valor do raio32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
escreva o valor do raio38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
escreva o valor do raio452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
escreva o valor do raio221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
escreva o valor do raio346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:11:27)
-- CODE: 
import from math pi

raio = float(input("escreva o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:11:03)
-- CODE: 
from import math pi

raio = float(input("escreva o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    from import math pi
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    from import math pi
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    from import math pi
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    from import math pi
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    from import math pi
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    from import math pi
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:31)
-- CODE: 
import from math pi

raio = float(input("escreva o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    import from math pi
           ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
